force-app/main/default/objects/Equipment__c/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <description>The date the equipment was purchased</description>
    <label>Date Purchased</label>
    <required>true</required>
    <type>Date</type>
</CustomField>