force-app/main/default/objects/Equipment__c/fields/Office_s__c.field-meta.xml
<CustomField>
    <fullName>Office_s__c</fullName>
    <description>The offices which a piece of equipment will be stored. Can be multiple offices</description>
    <label>Office(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankstown</fullName>
            </value>
            <value>
                <fullName>Blacktown</fullName>
            </value>
            <value>
                <fullName>Brendale</fullName>
            </value>
            <value>
                <fullName>Briar Hill</fullName>
            </value>
            <value>
                <fullName>Brookvale</fullName>
            </value>
            <value>
                <fullName>Canberra</fullName>
            </value>
            <value>
                <fullName>Castle Hill</fullName>
            </value>
            <value>
                <fullName>Maroubra</fullName>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Logan</fullName>
            </value>
            <value>
                <fullName>Moonee Ponds</fullName>
            </value>
            <value>
                <fullName>Mulgrave</fullName>
            </value>
            <value>
                <fullName>Osborne Park</fullName>
            </value>
            <value>
                <fullName>Penrith</fullName>
            </value>
            <value>
                <fullName>Stones Corner</fullName>
            </value>
            <value>
                <fullName>Surrey Hills</fullName>
            </value>
            <value>
                <fullName>Wollongong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>