force-app/main/default/objects/Equipment__c/fields/Relevant_Discipline_s__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Discipline_s__c</fullName>
    <description>The disciplines that the equipment is used for.</description>
    <label>Relevant Discipline(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>EX PHYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>